--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@storybook/react": "^5.2.1",
     "@types/html-webpack-plugin": "^3.2.1",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.5",
     "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.0.4",
     "tslint": "^5.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3",
-    "webpack": "^4.39.2",
+    "webpack": "^4.40.2",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.8.0"
   },
